Minor: Change return code to 201
