# docs/swagger.yaml
@@ -147,8 +147,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/schemas.Task'
         "400":
